Add /time command to manage server time
Implemented the new /time command allowing users to set, add, and query the time in various worlds. Updated the necessary configurations and resource files to support this new feature.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -87,6 +87,8 @@ command.time.day=<gray><prefix> It is now day in <green><world></green></gray>
 command.time.midnight=<gray><prefix> It is now midnight in <green><world></green></gray>
 command.time.night=<gray><prefix> It is now night in <green><world></green></gray>
 command.time.noon=<gray><prefix> It is now noon in <green><world></green></gray>
+command.time.query=<gray><prefix> The time in <green><world></green> is <green><time></green></gray>
+command.time.set=<gray><prefix> Set the time in <green><world></green> to <green><time></green></gray>
 command.tpa.accepted.self=<gray><prefix> Accepted <green><player></green> teleport request</gray>
 command.tpa.accepted=<gray><prefix> <green><player></green> accepted your teleport request</gray>
 command.tpa.denied.self=<gray><prefix> Rejected <green><player></green> teleport request</gray>
