--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -82,6 +82,8 @@ command.time.day=<gray><prefix> Es ist jetzt Tag in <green><world></green></gray
 command.time.midnight=<gray><prefix> Es ist jetzt Mitternacht in <green><world></green></gray>
 command.time.night=<gray><prefix> Es ist jetzt Nacht in <green><world></green></gray>
 command.time.noon=<gray><prefix> Es ist jetzt Mittag in <green><world></green></gray>
+command.time.query=<gray><prefix> Die aktuelle Zeit in <green><world></green> ist <green><time></green></gray>
+command.time.set=<gray><prefix> Die Zeit in <green><world></green> wurde auf <green><time></green> gesetzt</gray>
 command.tpa.accepted.self=<gray><prefix> Du hast <green><player>'s</green> Teleportanfrage angenommen</gray>
 command.tpa.accepted=<gray><prefix> <green><player></green> hat deine Teleportanfrage angenommen</gray>
 command.tpa.denied.self=<gray><prefix> Du hast <green><player>'s</green> Teleportanfrage abgelehnt</gray>
