Correct weather command messages formatting
Fixed the closing tags for weather commands in tweaks.properties to ensure uniform formatting and correct display. This resolves the issue where the closing tags were missing a color code.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -117,9 +117,9 @@ command.warp.list=<gray><prefix> Warps <dark_gray>(<green><amount></green>):</da
 command.warp.set=<gray><prefix> The warp <green><name></green> has been set</gray>
 command.warp.unknown=<red><prefix> There is no warp called <dark_red><name></dark_red></red>
 command.warp=<gray><prefix> Teleported you to warp <green><name></green></gray>
-command.weather.rain=<gray><prefix> It is now raining in <green><world></gray>
-command.weather.sun=<gray><prefix> It is now sunny in <green><world></gray>
-command.weather.thunder=<gray><prefix> It is now thundering in <green><world></gray>
+command.weather.rain=<gray><prefix> It is now raining in <green><world></green></gray>
+command.weather.sun=<gray><prefix> It is now sunny in <green><world></green></gray>
+command.weather.thunder=<gray><prefix> It is now thundering in <green><world></green></gray>
 command.world.excluded=<red><prefix> The world <dark_red><world></dark_red> is not affected</red>
 gui.item.location=<dark_gray>»</dark_gray> <green><name></green>
 gui.page.next=<!i><dark_gray>»</dark_gray> <gray>Next page</gray>
