Update locale files to replace "player" with "entity"
Replaced instances of "player" with "entity" in both German and English locale files to accommodate broader use cases. This change ensures the proper handling of different entity types in command feedback messages.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -17,12 +17,12 @@ command.flight.enabled.others=<gray><prefix> <green><player></green> is now able
 command.flight.enabled.self=<gray><prefix> You are now able to fly</gray>
 command.gamemode.changed.others=<gray><prefix> <green><player></green> is now in <green><gamemode></green></gray>
 command.gamemode.changed.self=<gray><prefix> You are now in <green><gamemode></green></gray>
-command.god.active.others=<gray><prefix> <green><player></green> is now invulnerable</gray>
+command.god.active.others=<gray><prefix> <green><entity></green> is now invulnerable</gray>
 command.god.active.self=<gray><prefix> You are now invulnerable</gray>
-command.god.inactive.others=<gray><prefix> <green><player></green> is no longer invulnerable</gray>
+command.god.inactive.others=<gray><prefix> <green><entity></green> is no longer invulnerable</gray>
 command.god.inactive.self=<gray><prefix> You are no longer invulnerable</gray>
 command.hat.equipped=<gray><prefix> You have equipped your item as a hat</gray>
-command.health.restored.others=<gray><prefix> <green><player>'s</green> health has been restored</gray>
+command.health.restored.others=<gray><prefix> <green><entity>'s</green> health has been restored</gray>
 command.health.restored.self=<gray><prefix> Your health has been restored</gray>
 command.hold.item=<red><prefix> You have to hold an item in your main hand</red>
 command.home.delete.name=<gray><prefix> Your home <green><name></green> has been deleted</gray>
@@ -107,9 +107,9 @@ command.tpa.teleported=<gray><prefix> Teleported you to <green><player></green><
 command.tpa.timeout.self=<red><prefix> Your teleport request to <dark_red><player></dark_red> has expired</red>
 command.tpa.timeout=<red><prefix> <dark_red><player>'s</dark_red> teleport request has expired</red>
 command.tpa.toggled=<red><prefix> <dark_red><player></dark_red> does not accept tpa requests</red>
-command.vanish.disabled.others=<gray><prefix> <green><player></green> is now visible to others</gray>
+command.vanish.disabled.others=<gray><prefix> <green><entity></green> is now visible to others</gray>
 command.vanish.disabled.self=<gray><prefix> You are now visible to others</gray>
-command.vanish.enabled.others=<gray><prefix> <green><player></green> is now invisible to others</gray>
+command.vanish.enabled.others=<gray><prefix> <green><entity></green> is now invisible to others</gray>
 command.vanish.enabled.self=<gray><prefix> You are now invisible to others</gray>
 command.warp.delete=<gray><prefix> The warp <green><name></green> has been deleted</gray>
 command.warp.empty=<red><prefix> There are no warps yet</red>
