--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -13,11 +13,11 @@ command.flight.enabled.others=<gray><prefix> <green><player></green> kann ab jet
 command.flight.enabled.self=<gray><prefix> Du kannst ab jetzt fliegen</gray>
 command.gamemode.changed.others=<gray><prefix> <green><player></green> ist jetzt im <green><gamemode></green></gray>
 command.gamemode.changed.self=<gray><prefix> Du bist jetzt im <green><gamemode></green></gray>
-command.god.active.others=<gray><prefix> <green><player></green> ist jetzt unverwundbar</gray>
+command.god.active.others=<gray><prefix> <green><entity></green> ist jetzt unverwundbar</gray>
 command.god.active.self=<gray><prefix> Du bist jetzt unverwundbar</gray>
-command.god.inactive.others=<gray><prefix> <green><player></green> ist nicht länger unverwundbar</gray>
+command.god.inactive.others=<gray><prefix> <green><entity></green> ist nicht länger unverwundbar</gray>
 command.god.inactive.self=<gray><prefix> Du bist nicht länger unverwundbar</gray>
-command.health.restored.others=<gray><prefix> <green><player></green> wurde vollständig geheilt</gray>
+command.health.restored.others=<gray><prefix> <green><entity></green> wurde vollständig geheilt</gray>
 command.health.restored.self=<gray><prefix> Du wurdest vollständig geheilt</gray>
 command.hold.item=<red><prefix> Du musst ein Item in der Haupthand halten</red>
 command.home.delete.name=<gray><prefix> Dein Zuhause <green><name></green> wurde gelöscht</gray>
@@ -102,9 +102,9 @@ command.tpa.teleported=<gray><prefix> Du wurdest zu <green><player></green> tele
 command.tpa.timeout.self=<red><prefix> Deine Teleportanfrage zu <dark_red><player></dark_red> ist abgelaufen</red>
 command.tpa.timeout=<red><prefix> <dark_red><player>'s</dark_red> Teleportanfrage ist abgelaufen</red>
 command.tpa.toggled=<red><prefix> <dark_red><player></dark_red> akzeptiert keine Teleportanfragen</red>
-command.vanish.disabled.others=<gray><prefix> <green><player></green> ist wieder sichtbar für andere</gray>
+command.vanish.disabled.others=<gray><prefix> <green><entity></green> ist wieder sichtbar für andere</gray>
 command.vanish.disabled.self=<gray><prefix> Du bist wieder sichtbar für andere</gray>
-command.vanish.enabled.others=<gray><prefix> <green><player></green> ist jetzt unsichtbar für andere</gray>
+command.vanish.enabled.others=<gray><prefix> <green><entity></green> ist jetzt unsichtbar für andere</gray>
 command.vanish.enabled.self=<gray><prefix> Du bist jetzt unsichtbar für andere</gray>
 command.warp.delete=<gray><prefix> Der Warp <green><name></green> wurde gelöscht</gray>
 command.warp.empty=<red><prefix> Es existieren noch keine Warps</red>
