Update command speed messages to support 'entity'
Revised various speed command messages to replace '<player>' with '<entity>' for consistency. Added new messages for resetting speed and changing sneak speed in both English and German translation files.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -1,6 +1,6 @@
 chat.click.teleport=Click to teleport
 chat.format.delete=<dark_gray><hover:show_text:'Click to delete this message'>[<bold><dark_red>x</dark_red></bold>]</hover> </dark_gray>
-chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name></click> <dark_gray>»</dark_gray> <click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message></hover></click>
+chat.format=<delete><chat_prefix><click:suggest_command:'/tell <player> '><chat_display_name></click><chat_suffix> <dark_gray>»</dark_gray> <click:copy_to_clipboard:'<message_content>'><hover:show_text:'<lang:chat.copy.click>'><message></hover></click>
 command.back.none=<red><prefix> You can't go back any further</red>
 command.back=<gray><prefix> Teleported you to your last position</gray>
 command.broadcast.footer=<reset>
@@ -75,9 +75,13 @@ command.spawn.define=<red><prefix> Use <click:suggest_command:'/setspawn '><hove
 command.spawn.set=<gray><prefix> Set the spawn location to <green><world>, <x>, <y>, <z></green> [<green><yaw>, <pitch></green>]</gray>
 command.spawn.undefined=<red><prefix> The spawn is not yet defined</red>
 command.spawn=<gray><prefix> Teleported you to spawn</gray>
-command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> fly speed is now <green><speed></green></gray>
-command.speed.fly.changed.self=<gray><prefix> Your fly speed is now <green><speed></gray>
-command.speed.walk.changed.others=<gray><prefix> <green><player>'s</green> walk speed is now <green><speed></green></gray>
+command.speed.fly.changed.others=<gray><prefix> <green><entity>'s</green> fly speed is now <green><speed></green></gray>
+command.speed.fly.changed.self=<gray><prefix> Your fly speed is now <green><speed></green></gray>
+command.speed.reset.others=<gray><prefix> <green><entity>'s</green> speed has been reset</gray>
+command.speed.reset.self=<gray><prefix> Your speed has been reset</gray>
+command.speed.sneak.changed.others=<gray><prefix> <green><entity>'s</green> sneak speed is now <green><speed></green></gray>
+command.speed.sneak.changed.self=<gray><prefix> Your sneak speed is now <green><speed></green></gray>
+command.speed.walk.changed.others=<gray><prefix> <green><entity>'s</green> walk speed is now <green><speed></green></gray>
 command.speed.walk.changed.self=<gray><prefix> Your walk speed is now <green><speed></green></gray>
 command.suicide=<gray><prefix> You took your own life</gray>
 command.teleport.cancelled=<red><prefix> Teleportation was cancelled</red>
