--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -70,9 +70,13 @@ command.spawn.define=<red><prefix> Benutze <click:suggest_command:'/setspawn '><
 command.spawn.set=<gray><prefix> Der spawn wurde gesetzt <green><world>, <x>, <y>, <z></green> [<green><yaw>, <pitch></green>]</gray>
 command.spawn.undefined=<red><prefix> Der spawn ist noch nicht definiert</red>
 command.spawn=<gray><prefix> Du wurdest zu spawn teleportiert</gray>
-command.speed.fly.changed.others=<gray><prefix> <green><player>'s</green> Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
+command.speed.fly.changed.others=<gray><prefix> <green><entity>'s</green> Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
 command.speed.fly.changed.self=<gray><prefix> Deine Fluggeschwindigkeit ist jetzt <green><speed></green></gray>
-command.speed.walk.changed.others=<gray><prefix> <green><player>'s</green> Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
+command.speed.reset.others=<gray><prefix> <green><entity>'s</green> Geschwindigkeit wurde zurückgesetzt</gray>
+command.speed.reset.self=<gray><prefix> Deine Geschwindigkeit wurde zurückgesetzt</gray>
+command.speed.sneak.changed.others=<gray><prefix> <green><entity>'s</green> Schleichgeschwindigkeit ist jetzt <green><speed></green></gray>
+command.speed.sneak.changed.self=<gray><prefix> Deine Schleichgeschwindigkeit ist jetzt <green><speed></green></gray>
+command.speed.walk.changed.others=<gray><prefix> <green><entity>'s</green> Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
 command.speed.walk.changed.self=<gray><prefix> Deine Laufgeschwindigkeit ist jetzt <green><speed></green></gray>
 command.suicide=<gray><prefix> Du hast dir dein eigenes Leben genommen</gray>
 command.teleport.cancelled=<red><prefix> Teleportation wurde abgebrochen</red>
