Enhance InventoryCommand with translated item names
Updated the InventoryCommand to use localized strings for item names and inventory titles. This change improves the user experience by making the inventory interface more readable and consistent with the user's language settings.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -125,9 +125,16 @@ command.weather.rain=<gray><prefix> It is now raining in <green><world></green><
 command.weather.sun=<gray><prefix> It is now sunny in <green><world></green></gray>
 command.weather.thunder=<gray><prefix> It is now thundering in <green><world></green></gray>
 command.world.excluded=<red><prefix> The world <dark_red><world></dark_red> is not affected</red>
+gui.inventory.title=<player>'s Inventory
 gui.item.location=<dark_gray>»</dark_gray> <green><name></green>
 gui.page.next=<!i><dark_gray>»</dark_gray> <gray>Next page</gray>
 gui.page.previous=<!i><dark_gray>»</dark_gray> <gray>Previous page</gray>
+gui.placeholder.boots=<dark_gray>»</dark_gray> <green>Boots</green>
+gui.placeholder.chestplate=<dark_gray>»</dark_gray> <green>Chestplate</green>
+gui.placeholder.cursor=<dark_gray>»</dark_gray> <dark_aqua>Cursor</dark_aqua>
+gui.placeholder.helmet=<dark_gray>»</dark_gray> <green>Helmet</green>
+gui.placeholder.leggings=<dark_gray>»</dark_gray> <green>Leggings</green>
+gui.placeholder.off-hand=<dark_gray>»</dark_gray> <aqua>Off Hand</aqua>
 gui.title.homes=Your Homes
 gui.title.warps=Warps
 player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green></click> joined the game</gray>
