--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -120,9 +120,16 @@ command.weather.rain=<gray><prefix> Es regnet jetzt in <green><world></green></g
 command.weather.sun=<gray><prefix> Es scheint jetzt die Sonne in <green><world></green></gray>
 command.weather.thunder=<gray><prefix> Es gewittert jetzt in <green><world></green></gray>
 command.world.excluded=<red><prefix> Die Welt <dark_red><world></dark_red> ist nicht betroffen</red>
+gui.inventory.title=<player>'s Inventar
 gui.item.location=<dark_gray>»</dark_gray> <green><name></green>
 gui.page.next=<!i><dark_gray>»</dark_gray> <gray>Nächste Seite</gray>
 gui.page.previous=<!i><dark_gray>»</dark_gray> <gray>Vorherige Seite</gray>
+gui.placeholder.boots=<dark_gray>»</dark_gray> <green>Schuhe</green>
+gui.placeholder.chestplate=<dark_gray>»</dark_gray> <green>Brustplatte</green>
+gui.placeholder.cursor=<dark_gray>»</dark_gray> <dark_aqua>Mauszeiger</dark_aqua>
+gui.placeholder.helmet=<dark_gray>»</dark_gray> <green>Helm</green>
+gui.placeholder.leggings=<dark_gray>»</dark_gray> <green>Hose</green>
+gui.placeholder.off-hand=<dark_gray>»</dark_gray> <aqua>Zweithand</aqua>
 gui.title.homes=Deine Zuhausepunkte
 gui.title.warps=Schnellreisepunkte
 player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green> ist dem Spiel beigetreten</gray>
