Add subcommands to MotdCommand, update messages
Introduced "replace", "set", "clear", and "get" subcommands for MotdCommand to enhance functionality. Updated language properties to support the new message requirements and improve clarity.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -54,7 +54,9 @@ command.item.unbreakable.removed=<gray><prefix> Your item is no longer unbreakab
 command.item.unbreakable.success=<gray><prefix> Your item is now unbreakable</gray>
 command.last.seen.now=<gray><prefix> <green><player></green> is online at the moment</gray>
 command.last.seen.time=<gray><prefix> <green><player></green> was last seen <green><time></gray>
-command.motd.changed=<gray><prefix>Changed motd to <green><motd></green></gray>
+command.motd.changed=<gray><prefix> Changed motd to <green><motd></green></gray>
+command.motd.none=<red><prefix> The motd has not yet been set</red>
+command.motd=<gray><prefix> The motd is <click:copy_to_clipboard:'<motd>'><hover:show_text:'<lang:chat.copy.click>'><green><motd></green></hover></click></gray>
 command.msg.conversation=<red><prefix> You have no running conversation</red>
 command.msg.disabled=<red><prefix> You will no longer receive direct messages</red>
 command.msg.enabled=<gray><prefix> You will receive direct messages again</gray>
