--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -49,7 +49,9 @@ command.item.unbreakable.removed=<gray><prefix> Dein Item ist nicht länger unze
 command.item.unbreakable.success=<gray><prefix> Dein Item ist jetzt unzerstörbar</gray>
 command.last.seen.now=<gray><prefix> <green><player></green> is momentan online</gray>
 command.last.seen.time=<gray><prefix> <green><player></green> war zuletzt online <green><time></green></gray>
-command.motd.changed=<gray><prefix> Die motd ist jetzt <green><motd></green></gray>
+command.motd.changed=<gray><prefix> Die Motd ist jetzt <green><motd></green></gray>
+command.motd.none=<red><prefix> Die Motd ist noch nicht definiert</red>
+command.motd=<gray><prefix> Die Motd ist <click:copy_to_clipboard:'<motd>'><hover:show_text:'<lang:chat.copy.click>'><green><motd></green></hover></click></gray>
 command.msg.conversation=<red><prefix> Du bist in keiner laufende Konversation</red>
 command.msg.disabled=<red><prefix> Du akzeptierst keine Direktnachrichten mehr</red>
 command.msg.enabled=<gray><prefix> Du kannst wieder Direktnachrichten erhalten</gray>
