[ci skip] Fix typo

--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -1,4 +1,4 @@
-chat.click.teleport=Klicke zum teleportieren
+chat.click.teleport=Klicke zum Teleportieren
 chat.format.delete=<dark_gray><hover:show_text:'Klicke um diese Nachricht zu löschen'>[<bold><dark_red>x</dark_red></bold>]</hover> </dark_gray>
 command.back.none=<red><prefix> Du kannst nicht weiter zurück gehen</red>
 command.back=<gray><prefix> Du wurdest zu deiner letzten Position teleportiert</gray>
