Add TikTok link and command
Introduce TikTok social media links and commands. Added TikTok-related properties in multiple configuration files and implemented the TikTok command handler. This allows users to interact with TikTok through the application.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -150,8 +150,10 @@ social.twitch=<gray><prefix> Follow us on <u><click:open_url:'<twitch>'><#8b44f7
 social.website=<gray><prefix> Visit our <u><click:open_url:'<website>'><yellow>Website<yellow></click></u></gray>
 social.x=<gray><prefix> Follow us on <u><click:open_url:'<x>'><black>X</black></click></u></gray>
 social.youtube=<gray><prefix> Subscribe to us on <u><click:open_url:'<youtube>'><#ff0808>YouTube</click></u></gray>
+social.tiktok=<gray><prefix> Follow us on <u><hover:show_text:'Click to open'><click:open_url:'<tiktok>'><#00f7ee>TikTok</click></hover></u></gray>
 url.discord=Discord
 url.reddit=Reddit
+url.tiktok=TikTok
 url.twitch=Twitch
 url.x=X
 url.youtube=YouTube
