--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -144,3 +144,4 @@ social.twitch=<gray><prefix> Folge uns auf <u><click:open_url:'<twitch>'><#8b44f
 social.website=<gray><prefix> Besuche unsere <u><click:open_url:'<website>'><yellow>Website</yellow></click></u></gray>
 social.x=<gray><prefix> Besuche unsere <u><click:open_url:'<x>'><black>X</black></click></u></gray>
 social.youtube=<gray><prefix> Abonniere uns auf <u><click:open_url:'<youtube>'><#ff0808>YouTube</click></u></gray>
+social.tiktok=<gray><prefix> Folge uns auf <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<tiktok>'><#00f7ee>TikTok</click></hover></u></gray>
