Add hover text to social media links
Enhanced user interaction by adding hover texts to social media links, both in the default and German properties files. This improvement provides additional information when users hover over the links, improving clarity and user experience.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -143,14 +143,14 @@ player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green>
 player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green></click> left the game</gray>
 player.not.found=<red><prefix> The player <dark_red><player></dark_red> has never played before</red>
 prefix=<blue>Tweaks</blue> <dark_gray>»</dark_gray>
-social.discord=<gray><prefix> Chat with us on <u><click:open_url:'<discord>'><#535fee>Discord</click></u></gray>
-social.reddit=<gray><prefix> Check out our <u><click:open_url:'<reddit>'><#ff4500>Subreddit></click></u></gray>
+social.discord=<gray><prefix> Chat with us on <u><hover:show_text:'Click to open'><click:open_url:'<discord>'><#535fee>Discord</click></hover></u></gray>
+social.reddit=<gray><prefix> Check out our <u><hover:show_text:'Click to open'><click:open_url:'<reddit>'><#ff4500>Subreddit></click></hover></u></gray>
 social.teamspeak=<gray><prefix> Talk with us on <u><hover:show_text:'Click to copy: <teamspeak>'><click:copy_to_clipboard:'<teamspeak>'><#1c2837>TeamSpeak</click></hover></u></gray>
-social.twitch=<gray><prefix> Follow us on <u><click:open_url:'<twitch>'><#8b44f7>Twitch</click></u></gray>
-social.website=<gray><prefix> Visit our <u><click:open_url:'<website>'><yellow>Website<yellow></click></u></gray>
-social.x=<gray><prefix> Follow us on <u><click:open_url:'<x>'><black>X</black></click></u></gray>
-social.youtube=<gray><prefix> Subscribe to us on <u><click:open_url:'<youtube>'><#ff0808>YouTube</click></u></gray>
 social.tiktok=<gray><prefix> Follow us on <u><hover:show_text:'Click to open'><click:open_url:'<tiktok>'><#00f7ee>TikTok</click></hover></u></gray>
+social.twitch=<gray><prefix> Follow us on <u><hover:show_text:'Click to open'><click:open_url:'<twitch>'><#8b44f7>Twitch</click></hover></u></gray>
+social.website=<gray><prefix> Visit our <u><hover:show_text:'Click to open'><click:open_url:'<website>'><yellow>Website<yellow></click></hover></u></gray>
+social.x=<gray><prefix> Follow us on <u><hover:show_text:'Click to open'><click:open_url:'<x>'><black>X</black></click></hover></u></gray>
+social.youtube=<gray><prefix> Subscribe to us on <u><hover:show_text:'Click to open'><click:open_url:'<youtube>'><#ff0808>YouTube</click></hover></u></gray>
 url.discord=Discord
 url.reddit=Reddit
 url.tiktok=TikTok
