--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -137,11 +137,11 @@ gui.title.warps=Schnellreisepunkte
 player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green> ist dem Spiel beigetreten</gray>
 player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green> hat das Spiel verlassen</gray>
 player.not.found=<red><prefix> Der Spieler <dark_red><player></dark_red> war noch nie online</red>
-social.discord=<gray><prefix> Schreibe mit uns auf <u><click:open_url:'<discord>'><#535fee>Discord</click></u></gray>
-social.reddit=<gray><prefix> Besuche unseren <u><click:open_url:'<reddit>'><#ff4500>Subreddit</click></u></gray>
+social.discord=<gray><prefix> Schreibe mit uns auf <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<discord>'><#535fee>Discord</click></hover></u></gray>
+social.reddit=<gray><prefix> Besuche unseren <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<reddit>'><#ff4500>Subreddit</click></hover></u></gray>
 social.teamspeak=<gray><prefix> Rede mit uns auf <u><hover:show_text:'Klicke zum kopieren: <teamspeak>'><click:copy_to_clipboard:'<teamspeak>'><#1c2837>TeamSpeak</click></hover></u></gray>
-social.twitch=<gray><prefix> Folge uns auf <u><click:open_url:'<twitch>'><#8b44f7>Twitch</click></u></gray>
-social.website=<gray><prefix> Besuche unsere <u><click:open_url:'<website>'><yellow>Website</yellow></click></u></gray>
-social.x=<gray><prefix> Besuche unsere <u><click:open_url:'<x>'><black>X</black></click></u></gray>
-social.youtube=<gray><prefix> Abonniere uns auf <u><click:open_url:'<youtube>'><#ff0808>YouTube</click></u></gray>
 social.tiktok=<gray><prefix> Folge uns auf <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<tiktok>'><#00f7ee>TikTok</click></hover></u></gray>
+social.twitch=<gray><prefix> Folge uns auf <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<twitch>'><#8b44f7>Twitch</click></hover></u></gray>
+social.website=<gray><prefix> Besuche unsere <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<website>'><yellow>Website</yellow></click></hover></u></gray>
+social.x=<gray><prefix> Besuche unsere <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<x>'><black>X</black></click></hover></u></gray>
+social.youtube=<gray><prefix> Abonniere uns auf <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<youtube>'><#ff0808>YouTube</click></hover></u></gray>
