Refactor chat and connection messages handling
Unified placeholder handling by moving `serviceResolvers` to `TweaksPlugin`, enhancing maintainability. Updated messages to use `chat_display_name` and added a welcome message for new players. These changes improve code organization and message consistency.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -139,9 +139,10 @@ gui.placeholder.leggings=<dark_gray>»</dark_gray> <green>Leggings</green>
 gui.placeholder.off-hand=<dark_gray>»</dark_gray> <aqua>Off Hand</aqua>
 gui.title.homes=Your Homes
 gui.title.warps=Warps
-player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green></click> joined the game</gray>
-player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green></click> left the game</gray>
+player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><chat_display_name></green></click> joined the game</gray>
+player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><chat_display_name></green></click> left the game</gray>
 player.not.found=<red><prefix> The player <dark_red><player></dark_red> has never played before</red>
+player.welcome=<gray><prefix> Welcome <click:suggest_command:'/tell <player> '><green><chat_display_name></green></click> to the server! <dark_gray>(<yellow>#<id></yellow>)</dark_gray></gray>
 prefix=<blue>Tweaks</blue> <dark_gray>»</dark_gray>
 social.discord=<gray><prefix> Chat with us on <u><hover:show_text:'Click to open'><click:open_url:'<discord>'><#535fee>Discord</click></hover></u></gray>
 social.reddit=<gray><prefix> Check out our <u><hover:show_text:'Click to open'><click:open_url:'<reddit>'><#ff4500>Subreddit></click></hover></u></gray>
