--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -134,9 +134,10 @@ gui.placeholder.leggings=<dark_gray>»</dark_gray> <green>Hose</green>
 gui.placeholder.off-hand=<dark_gray>»</dark_gray> <aqua>Zweithand</aqua>
 gui.title.homes=Deine Zuhausepunkte
 gui.title.warps=Schnellreisepunkte
-player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green> ist dem Spiel beigetreten</gray>
-player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><player></green> hat das Spiel verlassen</gray>
+player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><chat_display_name></green> ist dem Spiel beigetreten</gray>
+player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><chat_display_name></green> hat das Spiel verlassen</gray>
 player.not.found=<red><prefix> Der Spieler <dark_red><player></dark_red> war noch nie online</red>
+player.welcome=<gray><prefix> Willkommen <click:suggest_command:'/tell <player> '><green><chat_display_name></green></click> auf dem Server! <dark_gray>(<yellow>#<id></yellow>)</dark_gray></gray>
 social.discord=<gray><prefix> Schreibe mit uns auf <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<discord>'><#535fee>Discord</click></hover></u></gray>
 social.reddit=<gray><prefix> Besuche unseren <u><hover:show_text:'Klicke zum öffnen'><click:open_url:'<reddit>'><#ff4500>Subreddit</click></hover></u></gray>
 social.teamspeak=<gray><prefix> Rede mit uns auf <u><hover:show_text:'Klicke zum kopieren: <teamspeak>'><click:copy_to_clipboard:'<teamspeak>'><#1c2837>TeamSpeak</click></hover></u></gray>
