Simplify and unify item command messages.
Removed redundant success and failure messages for item commands, consolidating them into single, streamlined messages. Added a new message, "nothing.changed," to handle cases where an action cannot modify anything. These changes improve clarity and maintain consistency across the localization files.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -35,19 +35,17 @@ command.home.unknown=<red><prefix> You have no home called <dark_red><name></dar
 command.hunger.satisfied.others=<gray><prefix> <green><player>'s</green> hunger has been satisfied</gray>
 command.hunger.satisfied.self=<gray><prefix> Your hunger has been satisfied</gray>
 command.inventory.full=<red><prefix> Your inventory is full</red>
-command.item.head.fail=<red><prefix> You did not receive any player head</red>
 command.item.head.none=<red><prefix> Could not find matching skull data</red>
 command.item.head.player=<gray><prefix> Head owner<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<owner>'><hover:show_text:'<lang:chat.copy.click>'><green><owner></green></hover></click></gray>
 command.item.head.received=<gray><prefix> You received a player head</gray>
 command.item.head.url=<gray><prefix> Head URL<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></hover></click></gray>
 command.item.head.value=<gray><prefix> Head Base64<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></hover></click></gray>
-command.item.lore.fail=<red><prefix> Failed to change the lore of your item</red>
-command.item.lore.success=<gray><prefix> Successfully changed the lore of your item</gray>
+command.item.lore=<gray><prefix> Successfully changed the lore of your item</gray>
 command.item.received=<gray><prefix> You received <green><amount> x <item></green></gray>
-command.item.rename.fail=<red><prefix> Failed to rename your item</red>
-command.item.rename.success=<gray><prefix> Successfully renamed your item</gray>
+command.item.rename=<gray><prefix> Successfully renamed your item</gray>
 command.item.repaired.all=<gray><prefix> All of your items got repaired</gray>
 command.item.repaired.fail=<red><prefix> Failed to repair your item</red>
+command.item.repaired.none=<red><prefix> None of your items got repaired</red>
 command.item.repaired.success=<gray><prefix>Your item got repaired</gray>
 command.item.unbreakable.fail=<red><prefix> Failed to make your item unbreakable</red>
 command.item.unbreakable.removed=<gray><prefix> Your item is no longer unbreakable</gray>
@@ -139,6 +137,7 @@ gui.placeholder.leggings=<dark_gray>»</dark_gray> <green>Leggings</green>
 gui.placeholder.off-hand=<dark_gray>»</dark_gray> <aqua>Off Hand</aqua>
 gui.title.homes=Your Homes
 gui.title.warps=Warps
+nothing.changed=<red><prefix> Nothing could be changed</red>
 player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><chat_display_name></green></click> joined the game</gray>
 player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><chat_display_name></green></click> left the game</gray>
 player.not.found=<red><prefix> The player <dark_red><player></dark_red> has never played before</red>
