--- a/src/main/resources/tweaks_german.properties
+++ b/src/main/resources/tweaks_german.properties
@@ -30,19 +30,17 @@ command.home.unknown=<red><prefix> Du hast kein Zuhause namens <dark_red><name><
 command.hunger.satisfied.others=<gray><prefix> <green><player>'s</green> Hunger wurde gestillt</gray>
 command.hunger.satisfied.self=<gray><prefix> Dein Hunger wurde gestillt</gray>
 command.inventory.full=<red><prefix> Dein Inventar ist voll</red>
-command.item.head.fail=<red><prefix> Du hast keinen Spielerkopf erhalten</red>
 command.item.head.none=<red><prefix> Es konnte keine passenden Kopfdaten gefunden werden</red>
 command.item.head.player=<gray><prefix> Kopf Besitzer<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<owner>'><hover:show_text:'<lang:chat.copy.click>'><green><owner></green></hover></click></gray>
 command.item.head.received=<gray><prefix> Du hast einen Spieler Kopf erhalten</gray>
 command.item.head.url=<gray><prefix> Head URL<dark_gray>:</dark_gray> <click:open_url:'<full_url>'><hover:show_text:'<lang:chat.copy.click>'><green><url></green></hover></click></gray>
 command.item.head.value=<gray><prefix> Head Base64<dark_gray>:</dark_gray> <click:copy_to_clipboard:'<full_value>'><hover:show_text:'<lang:chat.copy.click>'><green><value></green></hover></click></gray>
-command.item.lore.fail=<red><prefix> Die Beschreibung deines Items konnte nicht angepasst werden</red>
-command.item.lore.success=<gray><prefix> Die Beschreibung deines Items wurde erfolgreich angepasst</gray>
+command.item.lore=<gray><prefix> Die Beschreibung deines Items wurde erfolgreich angepasst</gray>
 command.item.received=<gray><prefix> Du hast <green><amount> x <item></green> erhalten</gray>
-command.item.rename.fail=<red><prefix> Dein Item konnte nicht umbenannt werden</red>
-command.item.rename.success=<gray><prefix> Dein Item wurde erfolgreich umbenannt</gray>
+command.item.rename=<gray><prefix> Dein Item wurde erfolgreich umbenannt</gray>
 command.item.repaired.all=<gray><prefix> Alle deine Items wurden repariert</gray>
 command.item.repaired.fail=<red><prefix> Dein Item konnte nicht repariert werden</red>
+command.item.repaired.none=<red><prefix> Keine deiner Items wurden repariert</red>
 command.item.repaired.success=<gray><prefix> Dein Item wurde repariert</gray>
 command.item.unbreakable.fail=<red><prefix> Dein Item konnte nicht unzerstörbar gemacht werden</red>
 command.item.unbreakable.removed=<gray><prefix> Dein Item ist nicht länger unzerstörbar</gray>
@@ -134,6 +132,7 @@ gui.placeholder.leggings=<dark_gray>»</dark_gray> <green>Hose</green>
 gui.placeholder.off-hand=<dark_gray>»</dark_gray> <aqua>Zweithand</aqua>
 gui.title.homes=Deine Zuhausepunkte
 gui.title.warps=Schnellreisepunkte
+nothing.changed=<red><prefix> Es konnte nichts geändert werden</red>
 player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><chat_display_name></green> ist dem Spiel beigetreten</gray>
 player.disconnected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><chat_display_name></green> hat das Spiel verlassen</gray>
 player.not.found=<red><prefix> Der Spieler <dark_red><player></dark_red> war noch nie online</red>
