Add TrashCommand to manage player inventory disposal
Implemented a new `/trash` command allowing players to open a virtual trash GUI for item disposal. Updated configuration, permissions, and localization files to support the command and integrated it into the plugin's command registration system.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -136,6 +136,7 @@ gui.placeholder.helmet=<dark_gray>»</dark_gray> <green>Helmet</green>
 gui.placeholder.leggings=<dark_gray>»</dark_gray> <green>Leggings</green>
 gui.placeholder.off-hand=<dark_gray>»</dark_gray> <aqua>Off Hand</aqua>
 gui.title.homes=Your Homes
+gui.title.trash=Trash
 gui.title.warps=Warps
 nothing.changed=<red><prefix> Nothing could be changed</red>
 player.connected=<gray><prefix> <click:suggest_command:'/tell <player> '><green><chat_display_name></green></click> joined the game</gray>
