Added support for TeamSpeak link in configuration
Included missing `url.teamspeak` property and registration logic.

--- a/src/main/resources/tweaks.properties
+++ b/src/main/resources/tweaks.properties
@@ -154,6 +154,7 @@ social.x=<gray><prefix> Follow us on <u><hover:show_text:'Click to open'><click:
 social.youtube=<gray><prefix> Subscribe to us on <u><hover:show_text:'Click to open'><click:open_url:'<youtube>'><#ff0808>YouTube</click></hover></u></gray>
 url.discord=Discord
 url.reddit=Reddit
+url.teamspeak=TeamSpeak
 url.tiktok=TikTok
 url.twitch=Twitch
 url.x=X
