[ci skip] Enabled fork processing in Renovate config
Added `forkProcessing` key to support forked repository updates.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -62,5 +62,6 @@
   "reviewers": [
     "NonSwag"
   ],
-  "semanticCommits": "enabled"
+  "semanticCommits": "enabled",
+  "forkProcessing": "enabled"
 }
