--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -62,6 +62,5 @@
   "reviewers": [
     "NonSwag"
   ],
-  "semanticCommits": "enabled",
-  "forkProcessing": "enabled"
+  "semanticCommits": "enabled"
 }
